--- a/assets/style.css
+++ b/assets/style.css
@@ -80,9 +80,9 @@ body {
 }
 .about-me__introduction {
   font-family: "Spectral";
+  font-size: 16px;
   font-weight: 800;
   font-style: italic;
-  width: 60%;
 }
 #about-me p {
   width: 80%;
