--- a/assets/style.css
+++ b/assets/style.css
@@ -180,7 +180,7 @@ body {
   height: 337px;
   padding: 1em;
   display: flex;
-  flex-direction: column;
+  flex-direction: column;z
   justify-content: space-between;
   z-index: 1;
 }
@@ -364,4 +364,9 @@ input[type="submit"] {
 
 .visually-hidden {
   display: none !important;
+}
+
+.lightboxImage.img-fluid {
+  width: 100%;
+  height: auto;
 }
